--- a/miniprogram/pages/home/home.wxss
+++ b/miniprogram/pages/home/home.wxss
@@ -3,20 +3,73 @@ page {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  color: cadetblue;
+  color: #ffffff;
+  background-color: blueviolet;
 }
+
 .homeScrollview {
   flex: 1;
   overflow-y: hidden;
-  
+  background-color: blueviolet;
 }
-
+ 
 .bannerView {
   width: 100vw;
-  height: 200rpx;
-  color: blueviolet;
+  height: 350px;
+  background-color: blueviolet;
 }
 
 .bannerImage {
-  flex: 1;
+  width: 100vw;
+  height: 350px;
+}
+
+.locationView {
+  display: flex;
+  width: 100%;
+  height: auto;
+  padding: 16px;
+  /* color: black; */
+}
+
+.locationImageView {
+  width: 18px;
+  height: 18px;
+}
+
+.locationText {
+  width: auto;
+  height: 16px;
+}
+
+.userInfoBackgroundView {
+  justify-content: center; /* 水平居中对齐 */
+  align-items: center; /* 垂直居中对齐 */
+  width: 100%;
+  height: 100px;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.userInfoView {
+  display: flex;
+  align-items: center; /* 垂直居中对齐 */
+  height: 100px;
+  box-sizing: border-box;
+  background-color: white;
+  border-radius: 10px; /* 设置圆角为10像素 */
+}
+
+.userInfoHeaderImage {
+  left: 16px;
+  width: 65px;
+  height: 65px;
+  border-radius: 5px; /* 设置圆角为5像素 */
+}
+
+.userInfoHeaderNickName {
+  left: 25px;
+  width: auto;
+  height: 20px;
+  color: black;
 }
