--- a/miniprogram/pages/rank/rank.wxml
+++ b/miniprogram/pages/rank/rank.wxml
@@ -1,2 +1,7 @@
-<!--pages/rank/rank.wxml-->
-<text>pages/rank/rank.wxml</text>
+<scroll-view scroll-y style="width: 100%; height: 100%;" type="custom">
+  <grid-view type="masonry" cross-axis-count="{{crossAxisCount}}" cross-axis-gap="{{crossAxisGap}}" main-axis-gap="{{mainAxisGap}}">
+    <grid-tile-img wx:for="{{gridList}}" wx:key="id" index="{{item.id}}" width="{{200}}" height="{{100 * item.sub}}"></grid-tile-img>
+
+    
+  </grid-view>
+</scroll-view>
