--- a/miniprogram/pages/shop/shop.wxml
+++ b/miniprogram/pages/shop/shop.wxml
@@ -1,19 +1,15 @@
 <!--pages/shop/shop.wxml-->
-<navigation-bar title="商城" back="{{false}}" color="black" background="#FFF"></navigation-bar>
-<scroll-view class="shopScrollview" scroll-y type="custom">
-  <!-- <view class="search-box">
-    <input placeholder="请输入关键词" class="search-input" bindinput="onInput" />
-    <button class="search-btn" bindtap="onSearch">搜索</button>
-  </view> -->
-  <view class="card-list">
-  <view wx:for="{{cardList}}" wx:key="index" class="card">
-    <image src="{{item.image}}" class="card-image" />
-    <view class="card-content">
-      <text class="card-title">{{item.title}}</text>
-      <text class="card-description">{{item.description}}</text>
-    </view>
+<navigation-bar title="兑换商城" back="{{false}}" color="white" background="#fd304d"></navigation-bar>
+<view class="search-backgroundView">
+  <view class="search-box">
+    <view class="search-icon"></view>
+    <view class="separator"></view>
+    <input class="search-input" placeholder="请输入搜索内容" />
+    <view class="search-btn" bind:tap="onSearch">搜索</view>
   </view>
 </view>
-
-
+<scroll-view scroll-y style="width:100%; height: 100%; padding: 8px;" type="custom">
+  <grid-view type="masonry" cross-axis-count="{{crossAxisCount}}" cross-axis-gap="{{crossAxisGap}}" main-axis-gap="{{mainAxisGap}}">
+    <grid-tile-img style="background-color: white; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* 添加阴影效果 */ border-radius: 8px;" bind:tap="onGridViewTap" data-index="{{index}}" wx:for="{{gridList}}" wx:key="id" index="{{item.id}}" width="{{200}}" height="{{100 * item.sub}}" commodity="{{item.commodity}}" exchangeNum="{{item.exchangeNum}}" inventory="{{item.inventory}}"></grid-tile-img>
+  </grid-view>
 </scroll-view>
