--- a/miniprogram/pages/rank/rank.wxss
+++ b/miniprogram/pages/rank/rank.wxss
@@ -14,18 +14,19 @@ page {
 .rank-list {
   width: 100%;
   color: black;
-  padding: 8px;
+  padding: 16px;
 }
 
 .rank-item {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
+  padding: 14px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* 添加阴影效果 */
   margin-bottom: 10px;
   color: black;
+  background-color: white;
 }
 
 .rank {
@@ -68,4 +69,58 @@ page {
   width: 50px;
   height: 20px;
   text-align: center;
+}
+
+.rankTopBackgroundView {
+  padding-top: 16px;
+  justify-content: center; /* 水平居中对齐 */
+  align-items: center; /* 垂直居中对齐 */
+  width: 100%;
+  height: 200px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-bottom: 16px;
+}
+
+.rankTopView {
+  display: flex;
+  align-items: center; /* 垂直居中对齐 */
+  height: 200px;
+  box-sizing: border-box;
+  background-color: white;
+  border-radius: 10px; /* 设置圆角为10像素 */
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.rankTopButtonView {
+  background-color: transparent;
+}
+
+.rankTopButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent; /* 设置背景色为透明 */
+  padding: 20px 20px; /* 按钮内边距 */
+  color: #1a1818; /* 文本颜色 */
+}
+
+.rankTopButtonIcon {
+  width: 20px; /* 图标宽度 */
+  height: 20px; /* 图标高度 */
+  margin-right: 5px; /* 图标右侧间距 */
+}
+
+.rankTopButtonText {
+  font-size: 13px; /* 文本字体大小 */
+}
+
+.rankTopImage {
+  top: 0px;
+  /* margin-left: 40px; */
+  margin-right: 10px;
+  right: 20px;
+  width: 180px;
+  height: 180px;
+  /* border-radius: 10px; 设置圆角为10像素 */
 }
